--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,16 @@ version = "0.1.0"
 authors = ["Paul Maskelyne <muttley@muttleyville.org>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+dotenv = "0.15"
+rand = "0.8.0"
+tracing = "0.1.23"
+tracing-subscriber = "0.2"
+
+[dependencies.serenity]
+version = "0.10"
+features = ["cache", "framework", "standard_framework", "rustls_backend"]
+
+[dependencies.tokio]
+version = "1.0"
+features = ["macros", "signal", "rt-multi-thread"]
