--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,9 @@ edition = "2018"
 
 [dependencies]
 dotenv = "0.15"
+lazy_static = "1"
 rand = "0.8.0"
+regex = "1"
 tracing = "0.1.23"
 tracing-subscriber = "0.2"
 
