move parse/roll to dice lib

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,7 @@ features = ["cache", "framework", "standard_framework", "rustls_backend"]
 [dependencies.tokio]
 version = "1.0"
 features = ["macros", "signal", "rt-multi-thread"]
+
+[dependencies.uuid]
+version = "0.8"
+features = ["v4"]
